--- a/app/index.html
+++ b/app/index.html
@@ -16,17 +16,34 @@
 </head>
 <body ng-app="sampleApp">
 
+<!--START NAV-->
+<nav class="top-bar foundation-bar" data-topbar>
+  <ul class="title-area">
+    <li class="name">
+      <span data-tooltip class="has-tip" title="Try resizing your browser to see how the grid stacks">
+        <h1 class="show-for-large-only"><a href="#">TEST APP</a></h1>
+      </span>
+    </li>
+  </ul>
+  <section class="top-bar-section">
+    <!-- Right Nav Section -->
+    <ul class="right">
+      <li>
+        <a href="#/outputs">Outputs</a>
+      </li>
+      <li>
+        <a href="#/metrics">Metrics</a>
+      </li>
+    </ul>
+  </section>
+</nav>
+<!--END NAV-->
 
-<div class="row">
-  <div class="small-12 columns">
-    <h1>Testing</h1>
-  </div>
-</div>
-<div class="row">
+<main class="row">
   <div class="small-12 columns">
     <div ng-view=""></div>
   </div>
-</div>
+</main>
 
 
 <!-- build:js(.) scripts/oldieshim.js -->
@@ -53,6 +70,8 @@
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="bower_components/angular-touch/angular-touch.js"></script>
+<script src="bower_components/api-check/dist/api-check.js"></script>
+<script src="bower_components/angular-formly/dist/formly.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -60,6 +79,7 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/outputsCtrl.js"></script>
 <script src="scripts/directive/outputDirective.js"></script>
+<script src="scripts/formly/formly.config.js"></script>
 <!-- endbuild -->
 </body>
 </html>
