--- a/app/scripts/directive/outputDirective.html
+++ b/app/scripts/directive/outputDirective.html
@@ -5,7 +5,26 @@
 <!--edit mode-->
 <div class="panel" ng-if="output.isEditMode">
   <form name="outputForm" ng-submit="output.save(outputForm)" novalidate>
-    <div class="row">
+    <formly-form model="output.model" fields="output.fields" form="output.form" options="output.options">
+      <div class="row">
+        <div class="columns small-12">
+          <ul class="button-group">
+            <li>
+              <button type="button" ng-click="output.delete(output)">Delete</button>
+            </li>
+            <li>
+              <button type="button" ng-click="output.cancel()">Cancel</button>
+            </li>
+            <li>
+              <button type="submit" ng-disabled="outputForm.$invalid">Save</button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </formly-form>
+
+
+    <!--<div class="row">
       <div class="columns small-12">
         <label ng-class="{error:outputForm.outputName.$invalid}">
           <input name="outputName" type="text" ng-model="output.name"
@@ -31,6 +50,6 @@
           </li>
         </ul>
       </div>
-    </div>
+    </div>-->
   </form>
 </div>
