fix outputs page

--- a/app/scripts/directive/editPanelDirective.html
+++ b/app/scripts/directive/editPanelDirective.html
@@ -1,6 +1,6 @@
 <!--display mode-->
 <div class="panel" ng-click="output.edit()" ng-if="!output.isEditMode">
-  <strong ng-bind="output.name"></strong>
+  <strong ng-bind="output.model.name"></strong>
 </div>
 <!--edit mode-->
 <div class="panel" ng-if="output.isEditMode">
