--- a/app/scripts/formly/input.html
+++ b/app/scripts/formly/input.html
@@ -1,2 +1,2 @@
-<input class="form-control" ng-model="model[options.key]" aria-describedby="{{options.key + '_error'}}"
-     placeholder="{{::options.templateOptions.placeholder}}">
+<input class="form-control" ng-model="model[options.key]" aria-describedby="{{::options.key + '_error'}}"
+     placeholder="{{options.templateOptions.placeholder}}">
