--- a/app/scripts/formly/radio.html
+++ b/app/scripts/formly/radio.html
@@ -1,7 +1,12 @@
-<div class="radio-inline" ng-repeat="(key, option) in to.options track by $index">
-  <input type="radio"
-         name="{{id + '_'+ $index}}"
-         id="{{id + '_'+ $index}}"
-         ng-value="::option[to.valueProp || 'value']"
-         ng-model="model[options.key]"> <label for="{{id + '_'+ $index}}" ng-bind="::option[to.labelProp || 'name']"> </label>
+<div class="radio-group">
+  <div ng-repeat="(key, option) in to.options" class="radio-inline">
+    <label>
+      <input type="radio"
+             id="{{id + '_'+ $index}}"
+             tabindex="0"
+             ng-value="option[to.valueProp || 'value']"
+             ng-model="model[options.key]">
+      {{option[to.labelProp || 'name']}}
+    </label>
+  </div>
 </div>
