--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,7 @@
 <script src="bower_components/angular-touch/angular-touch.js"></script>
 <script src="bower_components/api-check/dist/api-check.js"></script>
 <script src="bower_components/angular-formly/dist/formly.js"></script>
+<script src="bower_components/lodash/lodash.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -82,5 +83,12 @@
 <script src="scripts/directive/editPanelDirective.js"></script>
 <script src="scripts/formly/formly.config.js"></script>
 <!-- endbuild -->
+
+
+
+<!--angular templates-->
+
+
+
 </body>
 </html>
